--- a/machineTools/lathe.html
+++ b/machineTools/lathe.html
@@ -38,7 +38,7 @@
                     Treadmill motor, with controller circuit, run by arduino. Example, with no real details at <a href="https://www.youtube.com/watch?v=DJJ6G3-XbjA">https://www.youtube.com/watch?v=DJJ6G3-XbjA</a>
                     </li>
                     <li>
-                    Servo motors are typically used in industrial CNCs <br>
+                    Servo motors are typically used in industrial CNCs. Small version - <a href="https://www.youtube.com/watch?v=kIOwBBERioc">https://www.youtube.com/watch?v=kIOwBBERioc</a><br>
                     </li>
                     <li>
                     3 phase induction speed controlled via VFD which is controlled using MODbus<br>
