updated airbnb stuff

--- a/airbnb/thebasics.html
+++ b/airbnb/thebasics.html
@@ -23,8 +23,8 @@
                     <img src="" alt="">
                 </div>
                 <div class="basics-section-detail">
-                    <div>Network:DavesFiber</div>
-                    <div>Password:SevenSillySeaSlugs</div>
+                    <div>Network: DavesFiber</div>
+                    <div>Password: SevenSillySeaSlugs</div>
                 </div>
             </div>
             <div class=" col-6">
@@ -49,12 +49,11 @@
             </div>
         </div>
         <div class="row">
-
             <div class=" col-6">
                 <div class="basics-section-title script">Any Rules?</div>
                 <div class="basics-section-detail">
-                	<ul>
-                		<li>Smoking isn't allowed inside the apartment, but of course on the balcony is fine</li>
+                    <ul class="basics-list">
+                		<li>Smoking isn't allowed inside the apartment, but of course on the balcony is no problem</li>
                 		<li>Quiet hours for the bulding are 10pm-7am</li>
                 	</ul>
                 </div>
@@ -62,7 +61,7 @@
             <div class=" col-6">
                 <div class="basics-section-title script">What about check out?</div>
                 <div class="basics-section-detail">
-                	<ul>
+                	<ul class="basics-list">
                 		<li>Checkout time is 11am</li>
                 		<li>The keys go back in the lower mailbox</li>
                     	<li>If possible, let me know when you leave</li>
@@ -74,7 +73,8 @@
             <div class="col-12">
                 <div class="basics-section-title script">None of this is useful, how do i contact Dave?</div>
                 <div class="basics-section-detail">
-                    <div>By WhatsApp/Phone/SMS on +41 78 626 7574. AirBnb messages work too, but can sometimes be a bit slow</div>
+                    <div>By WhatsApp/Phone/SMS on +41 78 626 7574</div>
+                    <div>AirBnb messages work too, but can sometimes be a bit slow</div>
                 </div>
             </div>
         </div>
