--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <div class="section">
                         <h3 class="section-header">AirBnb</h3>
                         <a href="airbnb/thebasics.html">The Basics</a>
+                        <a href="airbnb/washing.html">Washing</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Cheat Sheets</h3>
