--- a/airBnb.html
+++ b/airBnb.html
@@ -9,13 +9,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/airbnb.css" type="text/css">
-    <title>The Basics</title>
+    <title>The Main Guide</title>
 </head>
 
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div class="page-title script col-12">The AirBnBasics</div>
+            <div class="page-title script col-12">The Main Guide</div>
         </div>
         <div class="row">
             <div class=" col-6">
@@ -27,59 +27,6 @@
                     <div>Password:SevenSillySeaSlugs</div>
                 </div>
             </div>
-            <div class=" col-6">
-                <div class="basics-section-title script">Where am i again?</div>
-                <div class="basics-section-detail">
-                    <div>Letzigraben 8</div>
-                    <div>8003 Zürich</div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="basics-section-title script">Where's the...</div>
-                <div class="basics-section-detail">
-                    <div><span class="basics-sub-heading">Toilet Paper?</span>&nbsp;&nbsp;&nbsp;In the cabinet under the bathroom sink</div>
-                    <div><span class="basics-sub-heading">Spare towels?</span>&nbsp;&nbsp;&nbsp;Also in the cabinet under the bathroom sink</div>
-                    <div><span class="basics-sub-heading">Recycling?</span>&nbsp;&nbsp;&nbsp;At the bottom of the 2-door cabinet, just outside the kitchen</div>
-                    <div><span class="basics-sub-heading">Hot water switch?</span>&nbsp;&nbsp;&nbsp;In the electric box, in the top right of the 2-door cabinet. </div>
-                    <div><span class="basics-sub-heading">Spare sheets, pillows?</span>&nbsp;&nbsp;&nbsp;In the white wardrobe outside the bathroom door</div>
-                    <div><span class="basics-sub-heading">Coffee machine?</span>&nbsp;&nbsp;&nbsp;Beside the kitchen window</div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-
-            <div class=" col-6">
-                <div class="basics-section-title script">Any Rules?</div>
-                <div class="basics-section-detail">
-                    <ul>
-                        <li>Smoking isn't allowed inside the apartment, but of course on the balcony is fine</li>
-                        <li>Quiet hours for the bulding are 10pm-7am</li>
-                    </ul>
-                </div>
-            </div>
-            <div class=" col-6">
-                <div class="basics-section-title script">What about check out?</div>
-                <div class="basics-section-detail">
-                    <ul>
-                        <li>Checkout time is 11am</li>
-                        <li>The keys go back in the lower mailbox</li>
-                        <li>If possible, let me know when you leave</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="basics-section-title script">None of this is useful, how do i contact Dave?</div>
-                <div class="basics-section-detail">
-                    <div>By WhatsApp/Phone/SMS on +41 78 626 7574. AirBnb messages work too, but can sometimes be a bit slow</div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="bottom"></div>
         </div>
     </div>
 </body>
