updated airbnb css refs

--- a/airbnb/parking.html
+++ b/airbnb/parking.html
@@ -29,7 +29,7 @@
             <div class="col-12">
                 <div class="basics-section-title script">Blue zones nearby</div>
                 <p>Below, you can see the blue zones near the apartment, marked with blue lines. It can be very busy, but normally it's possible to find something</p>
-                    <img src="images/parking.png" alt="" class="full-width-image">
+                    <img src="images/parking.png" class="full-width-image">
                 </div>
             </div>
             </div>
