--- a/airbnb/washing.html
+++ b/airbnb/washing.html
@@ -42,7 +42,7 @@
             </div>
             <div class="row">
                 <div class="page-title col-12">
-                    <img src="images/washing-room.png" alt="" class="full-width-image">
+                    <img src="images/washing-room.png" class="full-width-image">
                 </div>
             </div>
         </div>
