--- a/airbnb/luggage.html
+++ b/airbnb/luggage.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="row">
                 <div class="page-title col-12">
-                    <img src="images/luggage.png" alt="" class="full-width-image">
+                    <img src="images/luggage.png" class="full-width-image">
                 </div>
             </div>
         </div>
