--- a/airbnb/thebasics.html
+++ b/airbnb/thebasics.html
@@ -18,7 +18,7 @@
             <div class="page-title script col-12">The AirBnBasics</div>
         </div>
         <div class="row">
-            <div class=" col-6">
+            <div class="col-12 col-sm-6">
                 <div class="basics-section-title script">I need Wifi
                     <img src="" alt="">
                 </div>
@@ -27,7 +27,7 @@
                     <div>Password: SevenSillySeaSlugs</div>
                 </div>
             </div>
-            <div class=" col-6">
+            <div class=" col-12 col-sm-6">
                 <div class="basics-section-title script">Where am i again?</div>
                 <div class="basics-section-detail">
                     <div>Letzigraben 8</div>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="row">
-            <div class=" col-6">
+            <div class=" col-12 col-sm-6">
                 <div class="basics-section-title script">Any Rules?</div>
                 <div class="basics-section-detail">
                     <ul class="basics-list">
@@ -58,7 +58,7 @@
                 	</ul>
                 </div>
             </div>
-            <div class=" col-6">
+            <div class=" col-12 col-sm-6">
                 <div class="basics-section-title script">What about check out?</div>
                 <div class="basics-section-detail">
                 	<ul class="basics-list">
