--- a/airbnb/parking.html
+++ b/airbnb/parking.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
             <div class="col-12"><br>
-                <p>Firstly, please don't make the mistake of parking in the carpark directly beside the house. Those spaces are private, and the owners are likely to call the police to have cars taken away</p>
+                <p>Firstly, please don't make the mistake of parking in the carpark directly beside the house. Those spaces are private, and your car may be taken away</p>
                 <p>Along the street you'll see parking spaces with a blue line around them - these "blue zone" spaces are the best solution for parking nearby </p>
 
                 <p>Overnight (7pm-8am) and on Sundays you can park in the blue zone for free. At all other times you need a permit that costs 15 francs per day and you can only buy it online <a href="https://e-gov.stadt-zuerich.ch/egpakv/uctagesbewilligung/nutzungsbedingungen.xhtml"> here</a>. After you buy the permit, you print it out and display it in your car </p>
