--- a/airbnb/washing.html
+++ b/airbnb/washing.html
@@ -27,9 +27,9 @@
             <div class=" col-md-6 col-12">
                 <div class="basics-section-title script">What do i need to know?</div>
                 <ul class="basics-list">
-                    <li>The machine takes 20c or 1 franc coins. The amount you need depends on the length of the wash - 80c will get you a bit more than an hour, which is enough for most washes (you can see the wash time on the machine when you select the program)</li>
+                    <li>The machine takes 20c or 1 franc coins. 80c will get you a bit more than an hour, which is enough for most washes (you can see the wash time on the machine when you select the program)</li>
                     <li>Sometimes people turn the power off at the wall. If there's no lights on the coin box, use the weird turning switch on the wall to the left of the coin box to turn it on</li>
-                    <li>There's washing powder in the 2 door cupboard outside the kitchen, and a small brown purse with some coins</li>
+                    <li>There's washing powder in the tall cupboard in the kitchen, and a small brown purse with some coins</li>
                 </ul>
             </div>
             <div class=" col-md-6 col-12">
@@ -40,10 +40,9 @@
                     <li>Please take your washing out when it finishes</li>
                 </ul>
             </div>
-            <div class="row">
-                <div class="page-title col-12">
-                    <img src="images/washing-room.png" class="full-width-image">
-                </div>
+            <div class="col-12">
+                <div class="basics-section-title script">A map would be nice...</div>
+                Next page :-)
             </div>
         </div>
 </body>
