--- a/electronics/basics.html
+++ b/electronics/basics.html
@@ -22,6 +22,13 @@
                 <div class="h4" id="contents">Contents</div>
                 <div class="content-link"><a href="#relaysSolenoidsContactors">Relays, Solenoids & Contactors</a></div>
                 <div class="content-link"><a href="#powersupplies">Power Supplies</a></div>
+                        <div class="content-link"><a href="#batteries">Batteries</a></div>
+                <div class="row content-section">
+                    <div class="col-12 row-content">
+                        <div class="h4" id="batteries">Batteries</div>
+                        Jenny Wu at Docan has been recommended as a supplier of LiFePO4 battery cells
+                    </div>
+                </div>
                 <div class="content-link"><a href="#oscilloscope">Oscilloscopes</a></div>
                 <div class="content-link"><a href="#relays">Relays</a></div>
                 <div class="content-link"><a href="#encoders">Encoders</a></div>
@@ -54,15 +61,18 @@
             <div class="col-12 row-content">
                 <div class="h4" id="oscilloscope">Oscilloscopes</div>
             <a href="https://youtu.be/d58GzhXKKG8">How to choose an oscilloscope</a> by great scott <br>
-            <a href="https://youtu.be/xaELqAo4kkQ">EEVblog #279 - How NOT To Blow Up Your Oscilloscope!</a>
-            Potential oscilloscope - <a href="https://rigolshop.eu/product/oscilloscope/ds1000z/ds1054z.html">Rigol DS1054Z</a> comes recommended often on reddit 
-
-            Main considerations are 
+            <a href="https://youtu.be/xaELqAo4kkQ">EEVblog #279 - How NOT To Blow Up Your Oscilloscope!</a> <br>
+            Main considerations for choosing an oscilloscope are:
             <ul>
                 <li>Number of channels - number of signals you can look at simultaneously</li>
                 <li>Bandwidth</li>
                 <li>Sampling rate</li>
             </ul>
+            <strong>RIGOL DS1054Z</strong>
+            <a href="https://rigolshop.eu/product/oscilloscope/ds1000z/ds1054z.html">Rigol DS1054Z</a> comes recommended often on reddit, and also on by the australian guy on EEVblog <br>
+            <a href="https://www.instructables.com/How-to-Hack-Upgrade-a-Rigol-DS1054Z-Digital-Oscill/">How to unlock optional features </a>on your Rigol DS1054Z for free <br>
+            <strong>OWON VDS1022I</strong>
+            Owon vds1022i USB is a budget USB Isolated (i.e. won't blow your computer) option for about 120 euro - recommended by EEV blog for budget setup<br>
             </div>
         </div>
         <div class="row">
