--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         <a href="prism.html">Prism</a>
                     </div>
                     <div class="section">
-                        <h3 class="section-header">AirBnb</h3>
-                        <a href="airbnb/thebasics.html">The Basics</a>
-                        <a href="airbnb/washing.html">Washing</a>
+                        <h3 class="section-header">Apps</h3>
+                        <a href="apps/kotlinMultiplatformMobile.html">Kotlin Multiplatform Mobile</a>
+                        <a href="apps/android.html">Android</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Cheat Sheets</h3>
@@ -59,6 +59,9 @@
                         <h3 class="section-header">Raspberry Pi</h3>
                         <a href="raspberrypi/basics.html">Basics</a>
                         <a href="raspberrypi/arducam-imx519.html">Arducam IMX519</a>
+                        <a href="raspberrypi/bluetooth.html">Bluetooth</a>
+                        <a href="raspberrypi/bluetooth-gardener.html">Bluetooth Gardener</a>
+                        <a href="raspberrypi/BLUETOOTH_EXPERIMENTS.txt">Bluetooth Experiments</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Fusion360</h3>
@@ -72,11 +75,25 @@
                 <div class="col-12 col-sm-4">
                     <div class="section">
                         <h3 class="section-header">Practical Stuff</h3>
+                        <a href="mechanics/partDesign.html">Part Design Guidelines</a>
+                        <a href="mechanics/manufacturingProcesses.html">Manufacturing Processes</a>
+                        <a href="mechanics/usingMetalMachinery.html">Using Metalworking Machinery</a>
                         <a href="mechanics/bearings.html">Bearings</a>
                         <a href="electronics/basics.html">Electronics</a>
                         <a href="mechanics/gears.html">Gears</a>
                         <a href="mechanics/motors.html">Motors</a>
                         <a href="mechanics/motors.html">Salvaging Components</a>
+                        <a href="mechanics/finishing.html">Finishing</a>
+                    </div>
+                    <div class="section">
+                        <h3 class="section-header">Machine Tools</h3>
+                        <a href="machineTools/lathe.html">Lathe</a>
+                        <a href="machineTools/routerLathe.html">Router Lathe</a>
+                    </div>
+                    <div class="section">
+                        <h3 class="section-header">AirBnb</h3>
+                        <a href="airbnb/thebasics.html">The Basics</a>
+                        <a href="airbnb/washing.html">Washing</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Wood</h3>
