--- a/machineTools/routerLathe.html
+++ b/machineTools/routerLathe.html
@@ -20,13 +20,19 @@
         <div class="row">
             <div class="col-12 row-content">
                 <div class="h4" id="contents">Contents</div>
-        		<div class="content-link"><a href="#description">Description</a></div>
+        		<div class="content-link"><a href="#description">Features</a></div>
             </div>
         </div>
         <div class="row content-section">
             <div class="col-12 row-content">
-                <div class="h4" id="description">Description</div>
-                Not really a lathe. A piece ow wood is held at either end similarly to a headtock and tailstock in a lathe. The piece can be rotated by a stepper with high accuracy. Cutting would be done by a lather cutter. Sanding and/or drilling attachments could also be added.
+                <div class="h4" id="description">Features</div>
+                <ul>
+                    <li>Wood is held at either end similarly to a headtock and tailstock in a lathe</li>
+                    <li>The piece can be rotated by a stepper with high accuracy</li>
+                    <li>Cutting would be done by a router cutter in a router type spindle</li>
+                    <li>Sanding and/or drilling attachments could also be added.</li>
+                    <li>I guess it's a 2 axis cnc really - although maybe the spindle would need to be able to rotate to cut barrel shaped spindles</li>
+                </ul> 
             </div>
         </div>
     </div>
